# Agentic-System

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/config/: settings.py
src/system/: logs.py
