# ==========================================
# Project Metadata
# ==========================================
# Basic information about your Python project as defined by PEP 621 => description for Metadata 
[project]
name = "Production-Grade-AI-Agentic-System"             # The distribution/package name
version = "1.0.0"                                       # Current project version (semantic versioning recommended)
description = "A production grade AI agentic system."   # Short description shown on package indexes
authors = [                                             # Authors and contributes of the project
    { name="Mohammed Taharwah", email="mtahrawe695@gmail.com" }
]
readme = "README.md"                                    # README file used for long description
requires-python = ">=3.13"                              # Minimum supported Python version
license = { file = "LICENSE" }                          # License of the project
keywords = ["chatbot", "ai agentic system"]             # Keywords used for package discovery and search
dependencies = [
    "concurrent-log-handler>=0.9.29",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[project.urls]
Reporsitory = "https://github.com/MohammedBelalTaharwah/Agentic-System.git"


# Setuptools Configuration
# ==========================
# Uses the src/ project layout instead of placing packages at the repository root
[tool.setuptools]
package-dir = {"" = "src"}                                 # Treat src/ as the root package directory

# Automatically discover Python packages inside src/
[tool.setuptools.packages.find]
where = ["src"]                                            # Search for packages under src/
